# chronolab

./: .gitignore  README.md
chronolab/: README.md  index.html  package.json  pnpm-lock.yaml
chronolab/app-windows/: index.html  plot-window.html
chronolab/src/: App.tsx  Plotter.tsx  plot-window.tsx
chronolab/src-tauri/: Cargo.toml  tauri.conf.json
chronolab/src-tauri/capabilities/: default.json  plotter-capabilities.json
chronolab/src-tauri/src/: dataframe_handlers.rs  global_state.rs  lib.rs  main.rs  video_handlers.rs
chronolab/src/components/: App.tsx  Controller.tsx  Menu.tsx  NavigationBar.tsx  PlotSettings.tsx  Plotter.tsx  ToastContext.tsx  VideoPlayer.tsx
chronolab/src/components/menu-components/: DiscardFileDialog.tsx  FileMenu.tsx  ViewMenu.tsx  (+2 more)
chronolab/src/css/: output.css
chronolab/src/hooks/: useFileOperations.ts  useGlobalState.ts  useToast.ts
chronolab/src/themes/: ThemeContext.tsx  themes.ts
chronolab/src/utils/: fileSelectors.ts
chronolab/src/views/: main.tsx  plot-window.tsx
src-tauri/: Cargo.toml
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/custom-ui-components/: OptionalButton.tsx
src/components/menu-components/: FileMenu.tsx  SettingsButtons.tsx
src/css/: index.css
src/hooks/: useGlobalStateAttributeHookFactory.ts  useInvokeWithToast.ts
src/types/: appState.ts
src/utils/: datetimeHandlers.ts
src/views/: plot-window.tsx
test_datasets/: solar_panel_325_edited.csv  solar_panel_325_editted.csv  test_full_save_file.crm  test_full_save_file_2.crm  test_save.crm  test_save_file.crm
